# dkim-api

./: cloudbuild.yaml  compose.yml  pyproject.toml  requirements.txt
compose/fast-api/: Dockerfile  entrypoint.sh
project/: app.py  dkim_selectors.py  query.py
project/templates/: index.html
project/tests/fixtures/: sample_response.py
